Page MenuHome GnuPG

Kleopatra: Reloading smartcard does not import certificates from the card
Testing, LowPublic

Description

How to reproduce:

  • Insert a smartcard with S/MIME certificates (e.g. some NetKey card)
  • Open the smartcard window and wait until the certificates have been imported from the card
  • Keep the smartcard window open and delete the card certificates in the main window
  • Click the Reload button

Expected: The certificates are imported again from the card.
Actual: The smartcard window keeps displaying "no associated certificate".

Workaround: Close and re-open the smartcard window.

Usually one doesn't delete the card certificates. Even less so while the smartcard is inserted and the smartcard window is open. -> Low priority