Always emit cardChanged signal after reloading a smartcard

Comparing the data of the previous loading operation with the data of
the new loading operation isn't a good indicator because some information
like the card certificates are stored outside of the Card objects.

GnuPG-bug-id: 7433